# tylax

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  python-release.yml  release.yml
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/tylax/: __init__.py  _native.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_tylax.py
src/: batch.rs  lib.rs  wasm.rs
src/core/: mod.rs
src/core/latex2typst/: context.rs  environment.rs  markup.rs  math.rs  mod.rs  utils.rs
src/core/latex2typst/engine/: engine.rs  mod.rs
src/core/latex2typst/table/: cell.rs  hline.rs  mod.rs  parser.rs  tests.rs
src/core/typst2latex/: context.rs  markup.rs  math.rs  math_emit.rs  math_ir.rs  mod.rs  preprocess.rs  utils.rs
src/core/typst2latex/engine/: eval.rs  library.rs  mod.rs  value.rs
src/core/typst2latex/table/: cell.rs  generator.rs  hline.rs  mod.rs  tests.rs
src/data/: colors.rs  constants.rs  extended_symbols.rs  maps.rs  mod.rs  physics.rs  shorthands.rs  siunitx.rs  symbols.rs  typst_compat.rs
src/features/: bibtex.rs  images.rs  macros.rs  mod.rs  refs.rs  tables.rs  templates.rs  tikz.rs
src/utils/: diagnostics.rs  error.rs  files.rs  mod.rs
tests/: integration_tests.rs
tools/: compare.py  gen_maps.py
web/: .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: app.js  cetz-renderer.js  style.css
